Update: Favicon geändert, Integration8-Komponente hinzugefügt mit Job-Tags, Navbar angepasst, Marquee-Animationen konfiguriert

--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="shortcut icon" type="image/png" href="/Sprechblase.png" />
+    <link rel="icon" type="image/png" sizes="64x64" href="/Sprechblase.png" />
+    <link rel="icon" type="image/png" sizes="128x128" href="/Sprechblase.png" />
+    <link rel="icon" type="image/png" sizes="256x256" href="/Sprechblase.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/Sprechblase.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/Sprechblase.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/Sprechblase.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>rews</title>
+    <title>rewe Süd Entwurf</title>
   </head>
   <body>
     <div id="root"></div>
